# libskylark

./: .gitignore  .travis.yml  CMakeLists.txt  HOWTO.md  LICENSE  README.md  RELEASE_NOTES.md  deps.sh
cmake/: FindSerialPort.cmake
docs/: CMakeLists.txt  DESIGN.md  Doxyfile.in
include/libskylark/: errno.h  http.h  logging.h  platform.h  serial.h
src/: CMakeLists.txt  connect.c  http.c  logging.c  serial.c  sky-connect.c
test/: CMakeLists.txt  check_http.c  check_main.c  check_serial.c  check_suites.h
